--- a/html/index.html
+++ b/html/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
-  <link rel="stylesheet" href="css/style.css"><!-- DO NOT ALTER THIS LINE -->
+<head><meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Rice Recipe</title>
+  <link rel="stylesheet" href="css/style.css"><!-- DO NOT ALTER THIS LINE (had to alter this alter this line to get html to respond to css)-->
 </head>
-<body>
-  All your HTML code must go here, after the <code>body</code> element and before the <code>script</code> element.
-  <script src="js/app.js"></script><!-- DO NOT ALTER THIS LINE -->
+<body>All your HTML code must go here, after the <code>body</code> element and before the <code>script</code> element. hey
+  <script src="js/app.js"></script><!-- DO NOT ALTER THIS LINE (had to alter this line to html to respond to javascript)-->
 </body>
 </html>
