--- a/html/index.html
+++ b/html/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Rice Recipe</title>
-  <link rel="stylesheet" href="css/style.css"><!-- DO NOT ALTER THIS LINE (had to alter this alter this line to get html to respond to css)-->
-</head>
-<body>All your HTML code must go here, after the <code>body</code> element and before the <code>script</code> element. hey
-  <script src="js/app.js"></script><!-- DO NOT ALTER THIS LINE (had to alter this line to html to respond to javascript)-->
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Rice Recipes by Alessandro DiCesare</title>
+    <link rel="stylesheet" href="css/style.css"><!-- DO NOT ALTER THIS LINE-->
+  </head>
+  <body>
+    <header>
+      <h1>Rice Recipes by Alessandro DiCesare</h1>
+    </header>
+    <button id = "sprouted-california-rice">Sprouted California Rice</button>
+    <button id = "white-rice" >White Rice</button>
+    <input type="number" id="quantity" name="quantity" min="0" value="0">
+    <main>
+        <div id="make-spr-rice">
+          <p>Making Sprouted California Rice:</p>
+          <p>For slightly al dente rice:</p>
+          <p>Combine <span id="spr-cal-r-cups"></span> cups of rice with <span id="c-water"></span> cups of water or broth and 1 Tbsp olive oil. Bring to a boil and stir once to mix. Reduce heat to low, cover with a tight-fitting lid and cook for 25 minutes. Remove from heat and let stand for 5 minutes. Fluff with a fork and serve.</p>
+          <p>For softer rice:</p>
+          <p>Increase liquid by 1/2 cup and cook time by 5 minutes.</p>
+        </div>
+
+        <div id="make-wht-rice">
+          <p>Making White Rice:</p>
+          <p>Combine <span id="wht-r-cups"></span> cup of rice with <span id="cups-water"></span> cups of water and 1 Tbsp olive oil. Bring to a boil, then reduce heat to the lowest setting. Cook for about 18 minutes.</p>
+        </div>
+    </main>
+    <script src="js/app.js"></script><!-- DO NOT ALTER THIS LINE-->
+  </body>
 </html>
